MaxFit/mdapioutput/objects/Customer__c.object
<CustomObject>
    <label>Customer</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Customer #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>checkNumber__c</fullName>
        <label>checkNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customerNumber__c</fullName>
        <label>customerNumber</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>paymentDate__c</fullName>
        <label>paymentDate</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>amount__c</columns>
        <columns>checkNumber__c</columns>
        <columns>customerNumber__c</columns>
        <columns>paymentDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>